Few changes to existing controllers, mostly documentation related
